backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: 2022-04-02T23:20:50.52Z

  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: 2022-04-02T23:20:50.52Z
      labels:
        io.kompose.network/back-tier: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: pointer-backend:1
          name: backend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
