front-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: 2022-04-02T23:20:50.52Z
  name: front-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/front-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/front-tier: "true"
